# johnchandlerburnham.github.io

./: .gitignore  .gitmodules  CNAME  README.md  about.html  about.md  archive.html  contact.md  deploy.sh  flake.nix  hakyll.hs  index.html  index.md  posts.html  projects.html  projects.md  shell.nix  site.cabal  site.hs  stack.yaml
.github/workflows/: deploy.yml
css/: custom.css  default.css  syntax.css  tufte.css
notes/ctfp/: 00.html  00.md  01.html  01.md  02.html  02.md  03.html  03.md  04.html  05.html  06.html  06.md  07.html  07.md
notes/hpfp/: 00.html  00.md  01.html  01.md  02.html  02.md  03.html  03.md  04.html  04.md  05.html  05.md  06.html  06.md  07.html  07.md  08.html  08.md  09.html  09.md  10.html  10.md  11.html  (+25 more)
posts/: 2015-08-23-example.html  2015-08-23-example.markdown  workthrough-category-theory-milewski.html  workthrough-category-theory-milewski.md  workthrough-hpfp.html  workthrough-hpfp.md  workthrough-lambda-calculus-barendregt-barendsen.html  workthrough-lambda-calculus-barendregt-barendsen.md  workthrough-lambda-calculus-rojas.html  workthrough-lambda-calculus-rojas.md
projects/trpl/10/generic/: Cargo.toml
projects/trpl/10/generic/src/: lib.rs  lifetimes.rs  main.rs  points.rs
projects/trpl/15/ref-counted/: Cargo.toml
projects/trpl/15/ref-counted/src/: lib.rs  loop.rs  main.rs  weak.rs
tags/: bar1.html  category-theory.html  ctfp.html  foo.html  functional-programming.html  hardware.html  haskell.html  hpfp.html  lambda-calculus.html  lambda.html  math.html  notes.html  ocaml.html  ofvb.html  programming.html  rust.html  tlph.html  tools.html  trpl.html  workthrough.html
templates/: archive.html  default.html  post.html
(+304 files in other folders)
