cabal-version:       2.4
name:                site
version:             0.1.0.0
homepage:            https://github.com/johnchandlerburnham/johnchandlerburnham.github.io
license:             BSD-3-Clause
license-file:        LICENSE
author:              John Chandler Burnham
maintainer:          jcb@johnchandlerburnham.com
copyright:           2017 John Chandler Burnham
category:            Web
build-type:          Simple
extra-source-files:  README.md

executable site
  main-is:             hakyll.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.17 && < 5
                     , hakyll >= 4.16
                     , containers
                     , pandoc >= 3.0
