[package]
name = "generic"
version = "0.1.0"
authors = ["John C. Burnham <jcb@johnchandlerburnham.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "points"
path = "src/points.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "lifetimes"
path = "src/lifetimes.rs"

[dependencies]
