[package]
name = "ref-counted"
version = "0.1.0"
authors = ["John C. Burnham <jcb@johnchandlerburnham.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[[bin]]
name = "weak"
path = "src/weak.rs"
test = false
bench = false


[[bin]]
name = "main"
path = "src/main.rs"
test = false
bench = false
